--- a/checkout page/style.css
+++ b/checkout page/style.css
@@ -16,6 +16,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     font-family: 'Courier New', Courier, monospace;
+    margin-top: 100px;
 }
 
 h1 {
